--- a/README.Rmd
+++ b/README.Rmd
@@ -1,3 +1,9 @@
+---
+output: 
+  html_document: 
+    keep_md: yes
+    self_contained: yes
+---
 <!-- DO NOT EDIT README.md. It is created by README.Rmd -->
 
 ```{r header,echo=FALSE,results='hide'}
